# m1-panner

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  M1-Panner.jucer  README.md  VERSION
.github/workflows/: test-plugin.yaml
Modules/: CMakeLists.txt
Resources/: CMakeLists.txt  OFL.txt  test_memory_share.sh  test_memory_timeline_consumer.sh
Resources/overlay_debug/: README.md  list_windows.py  run_simulator.sh  video_window_simulator.py
Source/: CMakeLists.txt  Config.h  LegacyParameters.h  LockFreeRingBuffer.h  M1MemoryShare.cpp  M1MemoryShare.h  M1SystemHelperManager.cpp  M1SystemHelperManager.h  Overlay.cpp  Overlay.h  PannerOSC.cpp  PannerOSC.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RingBuffer.h  StreamingMode.h  TypesForDataExchange.h  WindowUtil.cpp  WindowUtil.h  WindowUtil.mm
Source/PlugSync/: AudioDataSender.cpp  AudioDataSender.h  EnvironmentVariable.h  ExternalMixerHandler.cpp  ExternalMixerHandler.h  MulticastReceiver.cpp  MulticastReceiver.h  NetworkCommunicator.cpp  NetworkCommunicator.h  PluginInstanceSynchronizer.cpp  PluginInstanceSynchronizer.h
Source/UI/: M1AlertComponent.h  M1Checkbox.h  M1Dropdown.h  M1DropdownButton.h  M1DropdownMenu.h  M1Knob.h  M1Label.h  M1PitchWheel.h  M1VolumeDisplayLine.h  NativeLookAndFeel.h  NativeOverlayReticleComponent.cpp  NativeOverlayReticleComponent.h  NativeOverlayUIComponent.cpp  NativeOverlayUIComponent.h  NativePannerReticleComponent.cpp  NativePannerReticleComponent.h  NativePannerUIComponent.cpp  NativePannerUIComponent.h  OverlayReticleField.h  OverlayUIBaseComponent.cpp  OverlayUIBaseComponent.h  PannerReticleField.h  PannerUIBaseComponent.cpp  PannerUIBaseComponent.h  PannerUIHelpers.h
Source/Utility/: SharedMemoryPaths.cpp  SharedMemoryPaths.h  SharedMemoryPaths.mm
cmake/: FindBoost.cmake  FindGTest.cmake  copy_arm_libs.sh  copy_x64_libs.sh  fetchM1SDK.cmake  merge_fat_libs.sh
