juce_add_binary_data(${CMAKE_PROJECT_NAME}_binary NAMESPACE BinaryData SOURCES mach1logo.png)
juce_add_binary_data(${CMAKE_PROJECT_NAME}_binary NAMESPACE BinaryData SOURCES bluetooth_icon.png)
juce_add_binary_data(${CMAKE_PROJECT_NAME}_binary NAMESPACE BinaryData SOURCES tech_support_icon.png)
juce_add_binary_data(${CMAKE_PROJECT_NAME}_binary NAMESPACE BinaryData SOURCES wi-fi_icon.png)
target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE ${CMAKE_PROJECT_NAME}_binary)