option(PLUGIN_FONT "Set the plugin's primary text font" "AileronBlack.ttf")

if(EXISTS "Resources/ProximaNovaReg.ttf" AND NOT IS_DIRECTORY "Resources/ProximaNovaReg.ttf")
	set(LOCAL_FONT ProximaNovaReg)
	set(LOCAL_FONT_TYPE ttf)
    juce_add_binary_data(Resources NAMESPACE BinaryData SOURCES mach1logo.png bluetooth_icon.png tech_support_icon.png wi-fi_icon.png ProximaNovaReg.ttf)
else()
	set(LOCAL_FONT AileronBlack)
	set(LOCAL_FONT_TYPE ttf)
    juce_add_binary_data(Resources NAMESPACE BinaryData SOURCES mach1logo.png bluetooth_icon.png tech_support_icon.png wi-fi_icon.png AileronBlack.ttf)
endif()

set(PLUGIN_FONT "${LOCAL_FONT}.${LOCAL_FONT_TYPE}")
add_compile_definitions(USER_FONT=${LOCAL_FONT} USER_FONT_TYPE=${LOCAL_FONT_TYPE})
target_compile_definitions(${PLUGIN_NAME} PUBLIC "${PLUGIN_FONT}")
message(STATUS "Font: ${PLUGIN_FONT}")